# swagger.yaml
@@ -3,10 +3,24 @@ info:
   title: Student Management APIs
   description: Student Management System
   version: 1.0.1
+  contact:
+    email: sonijayesh12345@gmail.com
+    url: "https://thejayeshsoni.github.io"
 
 servers:
-  - url: http://localhost:3000
+  - url: "{protocol}://{url}"
     description: for local host - regular
+    variables:
+      url:
+        enum:
+          - localhost:3000
+          - student-management-webapps.herokuapp.com
+        default: localhost:3000
+      protocol:
+        enum:
+          - http
+          - https
+        default: http
 
 components:
   securitySchemes:
@@ -19,33 +33,37 @@ components:
       name: token # cookie name
 
 paths:
-  /signup:
+  /admin/signup:
     post:
       tags:
         - Admin
-      summary: signup a new Admin. required fields are - firstName, lastName, email, password
+      summary: signup a new user. required files are - firstName, lastName, email, password and phone
       requestBody:
         content:
-          multipart/from-data:
+          multipart/form-data:
             schema:
-              type: Object
+              type: object
               required:
                 - firstName
                 - lastName
                 - email
                 - password
-              propperties:
+                - phone
+              properties:
                 firstName:
-                  type: String
+                  type: string
                   required: true
                 lastName:
-                  type: String
+                  type: string
                   required: true
                 email:
-                  type: String
+                  type: string
                   required: true
                 password:
-                  type: String
+                  type: string
+                  required: true
+                phone:
+                  type: number
                   required: true
       responses:
         200:
@@ -62,22 +80,301 @@ paths:
                   user:
                     type: object
                     properties:
-                      name:
+                      firstName:
+                        type: string
+                      lastName:
                         type: string
                       email:
                         type: string
                       role:
                         type: string
-                      photo:
-                        type: object
-                        properties:
-                          id:
-                            type: string
-                          secure_url:
-                            type: string
+                      phone:
+                        type: number
                       _id:
                         type: string
                       createdAt:
+                        type: string
+                      updatedAt:
+                        type: string
+        400:
+          description: Bad request
+        500:
+          description: internal server error
+
+  /admin/login:
+    post:
+      tags:
+        - Admin
+      summary: login a new user. required files are -  email and password. Also adds httpOnly cookie in browser. It sends token in response too.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+                - password
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        200:
+          description: All good success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  token:
+                    type: string
+                  user:
+                    type: object
+                    properties:
+                      firstName:
+                        type: string
+                      lastName:
+                        type: string
+                      email:
+                        type: string
+                      role:
+                        type: string
+                      phone:
+                        type: number
+                      _id:
+                        type: string
+                      createdAt:
+                        type: string
+                      updatedAt:
+                        type: string
+        400:
+          description: Bad request
+        500:
+          description: internal server error
+
+  /admin/logout:
+    get:
+      tags:
+        - Admin
+      summary: get request to logout the user. Also removes httpOnly cookies
+      responses:
+        200:
+          description: All good success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+
+        400:
+          description: Bad request
+        500:
+          description: internal server error
+
+  /admin/me:
+    get:
+      tags:
+        - Admin
+      summary: If user is admin, response will get array of all users
+      requestBody:
+
+      responses:
+        200:
+          description: All good success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  token:
+                    type: string
+                  user:
+                    type: object
+                    properties:
+                      firstName:
+                        type: string
+                      lastName:
+                        type: string
+                      email:
+                        type: string
+                      role:
+                        type: string
+                      phone:
+                        type: number
+                      _id:
+                        type: string
+                      createdAt:
+                        type: string
+                      updatedAt:
+                        type: string
+
+        400:
+          description: Bad request
+        500:
+          description: internal server error
+
+  /admin/addStudent:
+    post:
+      tags:
+        - Admin
+      summary: If user is Admin, then add a student
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              required:
+                - firstName
+                - lastName
+                - email
+                - password
+                - phone
+                - address
+              properties:
+                firstName:
+                  type: string
+                  required: true
+                lastName:
+                  type: string
+                  required: true
+                email:
+                  type: string
+                  required: true
+                password:
+                  type: string
+                  required: true
+                results:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      subject:
+                        type: string
+                      marks:
+                        type: number
+                address:
+                  type: string
+                phone:
+                  type: number
+      responses:
+        200:
+          description: All good success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  user:
+                    type: object
+                    properties:
+                      firstName:
+                        type: string
+                        required: true
+                      lastName:
+                        type: string
+                        required: true
+                      email:
+                        type: string
+                        required: true
+                      password:
+                        type: string
+                        required: true
+                      results:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            subject:
+                              type: string
+                            marks:
+                              type: number
+                      address:
+                        type: string
+                      phone:
+                        type: number
+                      _id:
+                        type: string
+                      createdAt:
+                        type: string
+                      updatedAt:
+                        type: string
+        400:
+          description: Bad request
+        500:
+          description: internal server error
+
+  # Student's endpoints
+  /student/login:
+    post:
+      tags:
+        - Student
+      summary: login Student. required files are -  email and password. Also adds httpOnly cookie in browser. It sends token in response too.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+                - password
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        200:
+          description: All good success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  token:
+                    type: string
+                  user:
+                    type: object
+                    properties:
+                      _id:
+                        type: string
+                      firstName:
+                        type: string
+                      lastName:
+                        type: string
+                      email:
+                        type: string
+                      results:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            subject:
+                              type: string
+                            marks:
+                              type: number
+                        example:
+                          - subject: "English"
+                            marks: 99
+                      role:
+                        type: string
+                      phone:
+                        type: number
+                      address:
+                        type: string
+                      createdAt:
+                        type: string
+                      updatedAt:
                         type: string
         400:
           description: Bad request
